text overflow fix

--- a/css/style.sass
+++ b/css/style.sass
@@ -119,6 +119,8 @@ h1, h2, h3, h4, .meta
     line-height: 1.6
     font-size: 1em
     font-family: $primary-type
+    text-overflow: ellipsis
+    overflow: hidden
     img
         margin: 3em auto
         display: block
